--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           sudo apt update
           sudo apt install -y build-essential
           pip install buildozer
-          buildozer init  # Initialize Buildozer if not already done
+          #buildozer init  # Initialize Buildozer if not already done
 
       - name: Build APK
         run: buildozer -v android debug
