--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y build-essential
+          sudo apt install -y python3-pip
           pip install buildozer
-          #buildozer init  # Initialize Buildozer if not already done
-
-      - name: Build APK
-        run: buildozer -v android debug
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
