--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,22 @@
-
 name: Build
-on:
-  push:
+on: [push, pull_request]
 
 jobs:
-# Build job. Builds app for Android with Buildozer
+  # Build job. Builds app for Android with Buildozer
   build-android:
     name: Build for Android
     runs-on: ubuntu-latest
-  
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-  
+
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
           buildozer_version: stable
-  
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
